--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Navigation</string>
     <string name="submit">submit</string>
     <string name="back">back</string>
+    <string name="nama_lengkap">NAMA LENGKAP</string>
+
 
 </resources>
